force-app/main/default/src/objects/HealthCloudGA__JobFlowSetting__mdt/fields/HealthCloudGA__Custom__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>