force-app/main/default/src/objects/HealthCloudGA__JobFlowSetting__mdt/fields/HealthCloudGA__JobName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__JobName__c</fullName>
    <label>Job Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>