force-app/main/default/src/objects/HealthCloudGA__JobFlowSetting__mdt/fields/HealthCloudGA__JobOrder__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__JobOrder__c</fullName>
    <label>Job Order</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>